# nyc-apartment-hunter

./: .env.example  .gitignore  Makefile  README.md  config.yaml  deploy-linux.sh  main.py  pyproject.toml  setup.sh
launchd/: com.nyc-apartment-hunter.plist
scripts/: debug_se.py  scrape_test.py
src/: config.py  dedup.py  monitor.py  notifier.py  scorer.py  scraper.py
src/templates/: email.html
systemd/: nyc-apartment-hunter.service
tests/: conftest.py  test_dedup.py  test_monitor.py  test_notifier.py  test_scorer.py  test_scraper.py
